# crusty-tools

./: .envrc  .gitignore  CHANGES.md  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crusty/: Cargo.toml
crusty-places/: Cargo.toml  Justfile  Readme.md  crates-io-readme.md
crusty-places/support/completions/: _places  _places.ps1
crusty-places/support/manpage/: places.1  places.md
crusty-software/: Cargo.toml  build.rs
crusty-software/examples/: deserialize.rs  serialize.rs
crusty-software/src/: cli.rs  custom_package.rs  flatpak_package.rs  lib.rs  main.rs  package_list.rs  packages.rs  provider.rs  rust_package.rs  system_package.rs  utils.rs
crusty-software2/: Cargo.toml
crusty-software2/src/: lib.rs  main.rs  packages.rs  packages2.rs  software-template.toml  utils.rs
crusty/src/: lib.rs
support/completions/: _crusty-places  _crusty-places.ps1  _crusty-software  _crusty-software.ps1  crusty-places.bash  crusty-places.elv  crusty-places.fish  crusty-software.bash  crusty-software.elv  crusty-software.fish
support/settings/: gnome.toml  software.toml
