[package]
name = "crusty-software"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.7.1", features = ["serde"] }
toml = { version = "0.8.19", features = ["indexmap", "preserve_order"] }
color-eyre = "0.6.3"
color-eyre-attach-report = "0.6.2"
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
