[package]
name = "crusty-software2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
indexmap = { version = "2.7.1", features = ["serde"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
which = "7.0.1"
pretty_env_logger = "0.5.0"
toml = { version = "0.8.19", features = ["indexmap", "preserve_order"] }
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
